package edu.jlu.csw.front;

/**
 * @author 10186
 * 包含 JavaFX 属性
 */
public class ViewModel {
    private final Model model=new Model();
}
